--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "dependencies": {
     "byteballcore": "git+https://github.com/byteball/byteballcore.git",
     "headless-byteball": "git+https://github.com/byteball/headless-byteball.git",
-	"i18n":"^0.8.3",
+    "i18n":"^0.8.3",
     "request": "^2.85.0",
-	"xml2js": "^0.4.19"
+    "xml2js": "^0.4.19"
+  },
+  "scripts": {
+    "test": "node test/locales.js"
   }
 }
