--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"i18n": "^0.8.3",
 		"request": "^2.85.0",
 		"xml2js": "^0.4.19",
-		"cheerio": "^1.0.0-rc.2"
+		"cheerio": "^1.0.0-rc.2",
+		"moment": "^2.22.2"
 	},
   "scripts": {
     "test": "node test/locales.js"
